import { DependencyKey, IContainer, isDependencyKey } from '../container/IContainer';
import { Provider } from '../provider/Provider';
import type { IProvider, ResolveDependency } from '../provider/IProvider';
import { DependencyMissingKeyError } from '../errors/DependencyMissingKeyError';
import type { IRegistration, ScopeMatchRule } from './IRegistration';
import { getTransformers } from './IRegistration';
import type { ProviderPipe } from '../provider/ProviderPipe';
import { isProviderPipe } from '../provider/ProviderPipe';
import { BindToken } from '../token/BindToken';
import { SingleToken } from '../token/SingleToken';
import { type MapFn, pipe } from '../utils/fp';
import { type constructor, Is } from '../utils/basic';

export class Registration<T = any> implements IRegistration<T> {
  static fromClass<T>(Target: constructor<T>, { name }: { name?: string } = {}) {
    const transform = pipe(...getTransformers(Target));
    return transform(new Registration(() => Provider.fromClass(Target), name ?? Target.name));
  }

  static fromValue<T>(value: T) {
    if (Is.constructor(value)) {
      const transform = pipe(...getTransformers(value as constructor<T>));
      return transform(new Registration(() => Provider.fromValue(value), value.name));
    }
    return new Registration(() => Provider.fromValue(value));
  }

  static fromFn<T>(fn: ResolveDependency<T>) {
    return new Registration(() => new Provider(fn));
  }

  static fromKey<T>(key: DependencyKey) {
    return new Registration<T>(() => Provider.fromKey(key));
  }

  private mappers: MapFn<IProvider<T>>[] = [];
  private aliases: Set<DependencyKey> = new Set();

  constructor(
    private createProvider: () => IProvider<T>,
    public key?: DependencyKey,
    private scopeRules: ScopeMatchRule[] = [],
  ) {}

  bindToKey(key: DependencyKey): this {
    this.key = key;
    return this;
  }

  bindToAlias(alias: DependencyKey): this {
    this.aliases.add(alias);
    return this;
  }

  pipe(...mappers: (MapFn<IProvider<T>> | ProviderPipe<T>)[]): this {
    const fns = mappers.map((m): MapFn<IProvider<T>> => (isProviderPipe<T>(m) ? m.mapProvider.bind(m) : m));
    this.mappers.push(...fns);
    return this;
  }

  when(...predicates: ScopeMatchRule[]): this {
    this.scopeRules.push(...predicates);
    return this;
  }

  bindTo(key: DependencyKey | BindToken): this {
    if (isDependencyKey(key)) {
      new SingleToken(key).bindTo(this);
      return this;
    }

    key.bindTo(this);
    return this;
  }

  private matchScope(container: IContainer): boolean {
    return this.scopeRules.reduce((prev, curr) => curr(container, prev), true);
  }

  applyTo(container: IContainer): void {
    if (!this.matchScope(container)) {
      return;
    }

    if (!this.key) {
      throw new DependencyMissingKeyError('No key provided for registration');
    }

    const provider = this.mappers.reduce<IProvider<T>>((p, m) => m(p), this.createProvider());
    container.register(this.key, provider, { aliases: [...this.aliases] });
  }

  getKeyOrFail(): DependencyKey {
    if (!this.key) {
      throw new DependencyMissingKeyError('No key provided for registration');
    }
    return this.key;
  }
}
