classDiagram
    class IContainer {
        +resolve(key) T
        +createScope(options) IContainer
        +register(key, provider) this
        +addRegistration(registration) this
        +dispose() void
        +getInstances() Instance[]
        +hasTag(tag) boolean
    }

    class Container {
        -parent: IContainer
        -scopes: IContainer[]
        -instances: Instance[]
        -providers: Map
        -injector: IInjector
        -tags: Set
        +resolve(key) T
        +createScope(options) IContainer
        +register(key, provider) this
        +dispose() void
    }

    class IProvider {
        +resolve(container, options) T
        +hasAccess(options) boolean
        +map(...mappers) this
        +addAccessRule(...rules) this
        +addArgsFn(fn) this
        +lazy() this
        +singleton(getCacheKey?) this
    }

    class Provider {
        -resolveDependency: ResolveDependency
        -argsFnList: ArgsFn[]
        -accessRules: ScopeAccessRule[]
        -mappers: DecorateFn[]
        -isLazy: boolean
        -cache: Map
        -getKey: GetCacheKey?
        +resolve(container, options) T
    }

    class IInjector {
        +resolve(container, constructor, options) T
    }

    class MetadataInjector {
        +resolve(container, constructor, options) T
        -createInstance(container, constructor, options) T
    }

    class SimpleInjector {
        +resolve(container, constructor, options) T
        -createInstance(container, constructor, options) T
    }

    class ProxyInjector {
        +resolve(container, constructor, options) T
        -createInstance(container, constructor, options) T
    }

    class IRegistration {
        +when(predicates) this
        +bindToKey(key) this
        +bindTo(key) this
        +pipe(mappers) this
        +applyTo(container) void
    }

    class Registration {
        -provider: IProvider
        -key: DependencyKey
        -scopeRules: ScopeMatchRule[]
        +when(predicates) this
        +bindToKey(key) this
        +applyTo(container) void
    }

    IContainer <|.. Container
    IContainer <|.. EmptyContainer
    Container --> IProvider : uses
    Container --> IInjector : uses
    Container --> IRegistration : manages
    IProvider <|.. Provider
    IInjector <|.. MetadataInjector
    IInjector <|.. SimpleInjector
    IInjector <|.. ProxyInjector
    IRegistration <|.. Registration
    Registration --> IProvider : creates
    Container --> Container : parent-child
